--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Telefon1
-
-spring.jpa.database=mysql
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+
+
+//spring.jpa.show-sql=true
+        
+#spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=Telefon1
+
+#spring.jpa.database=mysql
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
