--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.4.1'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+
 	//id 'war'
 }
 
@@ -54,7 +55,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.h2database/h2
 	testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
 	// https://mvnrepository.com/artifact/org.postgresql/postgresql
-	compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+	//compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
 	//https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
@@ -67,6 +68,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
 	//compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.1'
+
+	// https://mvnrepository.com/artifact/com.github.jsimone/webapp-runner
+
 
 }
 
