--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.github.jsimone/webapp-runner
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 
 }
