--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database=postgresql
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 
-server.port=8080
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Telefon1
-spring.jpa.database=mysql
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=Telefon1
+#spring.jpa.database=mysql
 #spring.jpa.show-sql=true
 server.servlet-path=/api
+admin.mail=kodillatest45@gmail.com
 
 
 endpoints.metrics.enabled=true
@@ -33,5 +34,6 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
