--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 #spring.datasource.password=Telefon1
 #spring.jpa.database=mysql
 #spring.jpa.show-sql=true
-server.servlet-path=/api
-admin.mail=kodillatest45@gmail.com
+#server.servlet-path=/api
+#admin.mail=kodillatest45@gmail.com
 
 
 endpoints.metrics.enabled=true
