--- a/build.gradle
+++ b/build.gradle
@@ -54,9 +54,10 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.h2database/h2
 	testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
 	// https://mvnrepository.com/artifact/org.postgresql/postgresql
-	compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+	// https://mvnrepository.com/artifact/org.postgresql/postgresql
+	//compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
 	//https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
 
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
