--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	runtimeOnly 'mysql:mysql-connector-java'
+	//runtimeOnly 'mysql:mysql-connector-java'
 	runtimeOnly 'org.postgresql: postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// https://mvnrepository.com/artifact/org.springframework/spring-web
@@ -57,7 +57,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.postgresql/postgresql
 	//compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
 	//https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
 
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
