--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 #spring.datasource.username=root
 #spring.datasource.password=Telefon1
