--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=*****
+spring.datasource.password=Telefon1
 spring.jpa.database=mysql
 
 server.servlet-path=/api
@@ -26,7 +26,7 @@ trello.app.username=maciejpalczewski1
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kodillatest45@gmail.com
-spring.mail.password=******
+spring.mail.password=Pszczyna10a
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
