--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/kodilla-tasks?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Telefon1
+spring.datasource.username=kodilla_user
+spring.datasource.password=kodilla_password
 spring.jpa.database=mysql
 
 server.servlet-path=/api
