--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.4.4'
+// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
+	implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.12.RELEASE'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
 
 
